--- a/ss6_css/bai_tap/tao_trang_doc_truyen_ngan/tao_trang_doc_truyen_ngan.css
+++ b/ss6_css/bai_tap/tao_trang_doc_truyen_ngan/tao_trang_doc_truyen_ngan.css
@@ -1,9 +1,11 @@
 #mucluc {
     float: left;
     padding-left: 50px;
+    padding-top: 70px;
     position: fixed;
     font-size: large;
 }
+
 #noidung {
     float: right;
     width: 800px;
@@ -13,5 +15,41 @@
 }
 
 body {
-    background-image: url("https://mrvivu.com/wp-content/uploads/2021/01/nha-gia-kim-sach-1536x1075.jpg");
+    background-image: url("https://bookhunterclub.com/wp-content/uploads/2016/10/Moment_5_-_Desert.jpg");
+}
+
+h1{
+    color: white;
+    text-align: center;
+    font-family: "Calibri", sans-serif;
+    font-size: 80px;
+    /*background: linear-gradient(-45deg, #00fff4, #b3ff00, #ff009c, #5300ff);*/
+    /*background: linear-gradient(-45deg, goldenrod, yellow, white);*/
+    background: linear-gradient(-45deg, black, white, gold);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: gradient 2s ease infinite;
+    background-size: 200% 200%;
+    text-transform: uppercase;
+}
+
+p {
+    font-family: "Book Antiqua" ;
+}
+@keyframes gradient {
+    0%,100%{
+        background-position: 0% 50%;
+    }
+    50%{
+        background-position: 100% 50%;
+    }
+}
+
+a {
+    text-decoration: none;
+    font-family: Arial;
+}
+
+html {
+    scroll-behavior: smooth;
 }
